Tue May  8 08:54:48 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/abbrev.rb:  Fixed typo in abbrev pattern documentation.  Based on
	  patch by Mark Rushakoff.  [ruby-trunk - #6346]

Tue May  8 07:44:18 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_start_ssl): remove useless rb_sys_fail
	  before ossl_raise. this cause a test failure on Linux.
	  http://u64.rubyci.org/~chkbuild/ruby-trunk/log/20120507T190102Z.log.html.gz

Tue May  8 05:35:18 2012  Eric Hodel  <drbrain@segment7.net>

	* object.c (Init_Object):  Added reference to variable.c where
	  public_constant and private_constant documentation lives.  [#6381]

Tue May  8 04:47:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::Runner#output): prefer local output to
	  get rid of unexpected side effect in test/minitest/metametameta.rb.

	* lib/test/unit.rb (MiniTest#run_test): show the running test in $0.

	* lib/test/unit.rb (Test::Unit::StatusLineOutput): new class to output
	  in status line.

	* test/testunit/test_hideskip.rb (TestHideSkip#test_hideskip):
	  MiniTest#puke now reports Skipped messages only if verbose mode.

	* test/testunit/test_sorting.rb (TestTestUnitSorting#test_sorting):
	  ditto.

	* lib/test/unit.rb (Test::Unit::Runner#puke): modify only result and
	  drop useless reports, not override entirely.

	* bootstraptest/runner.rb (exec_test, show_progress): show rotators
	  and pass/fail counts.

	* sample/test.rb (PROGRESS): refine output.

Tue May  8 02:34:26 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/minitest/unit.rb (assert_match): refix of r35563.
	  r35563 breaks the intention of the original change.
	  https://github.com/seattlerb/minitest/commit/68858105b2eb11c85105ffac5f32b662c59397f3
	* lib/minitest/unit.rb (refute_match): ditto.

Mon May  7 21:19:17 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge JSON 1.7.1.
	  https://github.com/flori/json/commit/e5b9a9465c1159fae533bca320d950b772bcb4ac
