@@ -1,3 +1,8 @@
+Tue May  8 11:21:27 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/minitest/metametameta.rb (MetaMetaMetaTestCase#assert_report):
+	  support drive letter on Windows.  yes, the original code is metameta.
+
 Tue May  8 08:54:48 2012  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/abbrev.rb:  Fixed typo in abbrev pattern documentation.  Based on
